# UNINA-YOLO-DLA

./: .gitignore  FIX.md  INSTRUCTIONS.md  PROMPTS.md  README.md  RESEARCH.md
unina_yolo_dla/: .gitignore  README.md  __init__.py  active_learning.py  auto_labeler.py  data_loader.py  demo.ipynb  eval.py  export_trt.py  fsd_data.yaml  mine_data.py  model.py  qat.py  requirements.txt  run_local_debug.ps1  run_local_debug.sh  setup_env.ps1  setup_env.sh  train.py  trainer.py  unina-yolo-dla-m.yaml  unina-yolo-dla.yaml
unina_yolo_dla/ros2_ws/src/perception/: CMakeLists.txt  package.xml
unina_yolo_dla/ros2_ws/src/perception/config/: params.yaml
unina_yolo_dla/ros2_ws/src/perception/include/: cuda_preprocess.h  gpu_postprocess.h  postprocess.hpp
unina_yolo_dla/ros2_ws/src/perception/launch/: perception.launch.py
unina_yolo_dla/ros2_ws/src/perception/msg/: GpuBufferPtr.msg
unina_yolo_dla/ros2_ws/src/perception/src/: cuda_preprocess.cu  gpu_postprocess.cu  perception_node.cpp
unina_yolo_dla/tools/: generate_synthetic_fsd.py
unina_yolo_dla/unina_yolo_dla/: mocks.py
